Refactoring for Component generation
This commit rips up the previous API generation infrastructure to
begin replacing it with component generation. It does not work, but
it compiles.